codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_pending_steers_above_queued_messages.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 52, height: 11 },
    content: [
        "• Current-turn messages after next tool call (press ",
        "  esc to interrupt and send immediately)            ",
        "  ↳ Please continue.                                ",
        "  ↳ Check the last command output.                  ",
        "                                                    ",
        "• Messages queued until this turn ends              ",
        "  ↳ Rejected steer that will be retried.            ",
        "                                                    ",
        "• Follow-ups queued for next turn                   ",
        "  ↳ Queued follow-up question                       ",
        "    ⌥ + ↑ edit last queued message                  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 51, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 34, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 29, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 34, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
